# lite-xl

./: meson.build  meson_options.txt
.github/workflows/: build.yml  release-custom.yml  release-jit.yml
data/core/: common.lua  config.lua  init.lua  rootview.lua  start.lua  statusview.lua
data/core/commands/: doc.lua
data/core/doc/: init.lua
data/plugins/: findfileimproved.lua  projectsearch.lua  treeview.lua
docs/api/: globals.lua  system.lua
scripts/: appimage-jit.sh  build-appimage.sh  build-jit.sh  build.sh  create-appimage.sh
src/: main.c  meson.build  rencache.c  rencache.h  renderer.c  renderer.h  renwindow.c  renwindow.h
src/api/: api.c  api.h  renderer.c  system.c
src/compat/: compat-5.3.c
